--- a/index.css
+++ b/index.css
@@ -14,6 +14,11 @@ body {
 	font-style: italic;
 	background-color: #000;
 	color: #fff;
+	overflow: hidden;
+}
+
+.no-transition {
+  transition: none !important;
 }
 
 a {
@@ -31,13 +36,44 @@ img {
 	margin: 0;
 }
 
+#top {
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	height: 200px;
+	width: 100%;
+	z-index: 2;
+}
+
+#left {
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	height: 100%;
+	width: 450px;
+	z-index: 3;
+	padding-top: 200px;
+	overflow-y: auto;
+}
+
+#right {
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	height: 100%;
+	width: 100%;
+	z-index: 1;
+	padding-top: 200px;
+	padding-left: 450px;
+}
+
 .tags {
 	list-style-type: none;
 	padding: 0px;
 }
 
 .tags li {
-	display: inline-block;
+	display: block;
 }
 
 .content {
@@ -45,7 +81,7 @@ img {
 }
 
 .thumbs {
-	text-align: center;
+	text-align: left;
 	font-size: 0;
 }
 
@@ -53,8 +89,8 @@ img {
 	position: relative;
 	display: inline-block;
 	vertical-align: top;
-	width: 20vw;
-	height: 20vw;
+	width: 200px;
+	height: 200px;
 	margin: 0px;
 	font-size: 12px;
 }
@@ -67,29 +103,37 @@ img {
 	display: block;
 	width: 100%;
 	height: 100%;
+	overflow: hidden;
 }
 
 .thumb__title {
+	display: block;
 	position: absolute;
 	left: 0px;
 	bottom: 0px;
+	height: 30px;
 	width: 100%;
 	background-color: #fff;
 	color: #000;
 	padding: 5px;
 	margin: 0px;
+	transition: all 0.3s;
+}
+
+.thumb:hover .thumb__title {
+	height: 20%;
+}
+
+.thumb.open:hover .thumb__title {
+	height: 100% !important;
 }
 
 .project {
 	display: none;
-	position: fixed;
-	top: 0px;
-	left: 0px;
+	
 	height: 100%;
 	padding: 10px;
-	margin: 10px;
-	background-color: #fff;
-	color: #000;
+	margin: 0px;
 	overflow: hidden;
 }
 
